# text

./: CMakeLists.txt  main.c
algorithms/: algorithms_analog_waveform.c  algorithms_analog_waveform.h  algorithms_filter.c  algorithms_filter.h  algorithms_linked_list.c  algorithms_linked_list.h  algorithms_queue.c  algorithms_queue.h  algorithms_stack.c  algorithms_stack.h
